--- a/index.html
+++ b/index.html
@@ -59,11 +59,6 @@
 									</a>
 								</li>
 								<li class="menu__item">
-									<a href="#" class="menu__link">
-										Помощь
-									</a>
-								</li>
-								<li class="menu__item">
 									<a href="#contacts" class="menu__link">
 										Контакты
 									</a>
@@ -535,7 +530,7 @@
 				</div>
 			</div>
 		</div>
-	<section class="contacts">
+	<section class="contacts" id="contacts">
 		<div class="container">
 			<div class="row">
 				<div class="col-12">
